# wasup

./: .env.example  .gitignore  AUDIT-2026-07-12.md  BUILD-PLAN.md  CLAUDE.md  DECISIONS.md  Dockerfile  FIX-PLAN.md  OPEN-QUESTIONS.md  README.md  chatgpt-app-submission.json  pyproject.toml
.playwright-mcp/: page-2026-07-14T10-13-55-745Z.yml  page-2026-07-14T10-15-26-091Z.yml  page-2026-07-14T10-16-53-312Z.yml  page-2026-07-14T10-18-42-160Z.yml  page-2026-07-14T10-20-05-551Z.yml
artifacts/submission-demo/: concat.txt  render_submission_demo.sh
db/gold/: candidates.csv  gold_set.csv  mcp_tool_use.json  tag_relations.csv
db/migrations/: 002_core.sql  003_ops.sql  004_source_fetch_state.sql  005_phase2.sql  007_recipes.sql  (+10 more)
docs/: VPS-DEPLOYMENT.md
scripts/: coverage_chart.py  dev_db.sh  dump_gold_candidates.py  evaluate_tag_embeddings.py  gen_poster_fixture.py  index_audit.py  load_sources.py  load_venues.py  queue_snapshot.py  recall_redteam.py  repair_venues.sql
specs/: ARCHITECTURE.md  HURDLES.md  USE-CASE-VALIDATION.md
tests/: conftest.py  test_agent_extract.py  test_api.py  test_budget.py  test_digest.py  test_enrich.py  test_extract.py  test_fact_recovery.py  test_fingerprint.py  test_gold.py  test_headless.py  test_ladder_live.py  test_match.py  test_mcp.py  test_mcp_ranking.py  test_mcp_tool_use_gold.py  test_onboard.py  test_placeholder.py  test_probe.py  test_projection.py  test_qa.py  test_rebuild.py  test_recall.py  test_recipe.py  test_recurrence.py  test_redteam_fixes.py  test_schedule.py  test_search.py  test_search_live.py  test_tags.py  test_venues.py  test_worker.py
(+62 files in other folders)
