[project]
name = "eventindex"
version = "0.1.0"
description = "Linz event index - crawl, extract, resolve, serve"
authors = [
    { name = "Alexander Krauck", email = "alexander.krauck@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "openai>=1.60",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "icalendar>=6",
    "feedparser>=6",
    "beautifulsoup4>=4.12",
    "python-dateutil>=2.9",
]

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
